Style login page (issues on native)

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,42 @@
-<p>
-  login works!
-</p>
+<div class="page">
+  <div class="login">
+    <h1>
+        Sign In
+    </h1>
+
+    <div class="form">
+      <div class="username">
+        <ion-input placeholder="Username or Email"></ion-input>
+      </div>
+      <div class="password">
+        <ion-input placeholder="Password"></ion-input>
+      </div>
+    </div>
+
+    <div class="sign-up">
+      <span class="no-account">Don't have an account?<p class="link">Sign up</p></span>
+      <span class="link">Forgot Password?</span>
+    </div>
+
+    <div class="sign-in">
+      <ion-button>
+        Sign in
+      </ion-button>
+    </div>
+
+    <div class="footer">
+      <span>Sign in options:</span>
+      <div class="buttons">
+        <ion-button shape="round">
+          <ion-icon slot="icon-only" src="assets/icons/google.svg"></ion-icon>
+        </ion-button>
+        <ion-button shape="round">
+          <ion-icon slot="icon-only" src="assets/icons/facebook-f.svg"></ion-icon>
+        </ion-button>
+        <ion-button shape="round">
+          <ion-icon slot="icon-only" src="assets/icons/microsoft.svg"></ion-icon>
+        </ion-button>
+      </div>
+    </div>
+  </div>
+</div>
