--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -33,7 +33,7 @@ h1 {
     gap: 38px;
 
     > div {
-        border-bottom: 1px solid var(--text-primary);
+        border-bottom: 1px solid var(--primary);
         padding: 0 4px 6px;
     
     
