Create shared form button component

--- a/src/app/home/add-category/add-category.component.html
+++ b/src/app/home/add-category/add-category.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="footer">
-      <ion-button shape="round">Submit</ion-button>
+      <app-shared-form-button>Submit</app-shared-form-button>
     </div>
   </div>
 </div>
