--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,9 +24,9 @@
     </div>
 
     <div class="sign-in">
-      <ion-button>
+      <app-shared-form-button>
         {{signUp ? "Sign up" : "Login"}}
-      </ion-button>
+      </app-shared-form-button>
     </div>
 
     <div class="footer">
